fix(auth): add router dependency to useEffect hooks and fix OpenAI integration model usage

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
     "db:up": "drizzle-kit up",
-    "test": "export PLAYWRIGHT=True && pnpm exec playwright test --workers=4"
+    "test": "export PLAYWRIGHT=True && pnpm exec playwright test --workers=4",
+    "neo4j:init": "tsx scripts/initialize-graph-schema.ts"
   },
   "dependencies": {
     "@ai-sdk/react": "^1.2.8",
@@ -58,6 +59,7 @@
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "openai": "^4.95.1",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
     "postgres": "^3.4.4",
