--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
     "neo4j-driver": "^5.28.1",
-    "next": "15.3.0-canary.31",
+    "next": "^14.2.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "openai": "^4.95.1",
@@ -97,7 +97,7 @@
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.25.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
