--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
-OPENAI_API_KEY=sk-****
+# Authentication
+AUTH_SECRET=your-auth-secret-at-least-32-chars-long
+
+# Database
+DATABASE_URL=postgres://your-postgresql-url
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Neo4j
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=password
+NEO4J_PASSWORD=your-neo4j-password
+
+# OpenAI (for embeddings and web search)
+OPENAI_API_KEY=sk-your-openai-api-key
+
+# XAI (for generation)
+XAI_API_KEY=your-xai-api-key
+
+# Optional: Vercel Blob Store (for document attachments)
+BLOB_READ_WRITE_TOKEN=your-vercel-blob-token
